--- a/main.css
+++ b/main.css
@@ -1,13 +1,22 @@
+html {
+    font-size:16px;
+}
 body {
     margin:0;
 }
+/*transitions for buttons in nav*/
+#about {
+    transition:0.4s all ease;
+}
 .navigIntro {
-    background:rgba(27, 109, 63,0.01);
+    /*background:rgba(27, 109, 63,0.01);*/
     width:100%;
     margin:0;
     position:fixed;
+    z-index: 10;
     top:0;
     left:0;
+    transition: 0.6s all ease;
 }
 /*changing bootstrap navigation bar*/
 a:focus, a:hover {
@@ -70,6 +79,7 @@ a:focus, a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     height:100vh;
+    position:relative;
 }
 .mainTitle {
     color:white;
@@ -98,7 +108,70 @@ a:focus, a:hover {
     position:relative;
 }
 .mainBut button {
-    width:120px;
+    height:50px;
+    background:#1E7A45;
+    border-bottom:green 2px outset;
+}
+/* about */
+.about {
+    position:relative;
+    width:100%;
+    height:100vh;
+    background: #f6f6f6;
+    text-align:center;
+}
+.whatDo {
+    display:inline-block;
+    width:30%;
+    margin-left:1%;
+    margin-right:1%;
+    text-align: left;
+    margin-top:7%;
+}
+.whatDo h1 {
+    font-size:2.25rem;
+    font-weight:600;
+    color:#333;
+}
+.whatDo p {
+    font-size:1rem;
+    color:#666;
+}
+.grassCut {
+    display:inline-block;
+    width:28%;
+    margin-left:1%;
+    margin-right:1%;
+    border:10px solid white;
+    margin-top:7%;
+}
+.grassCut img {
+    width:100%;
+    height:auto;
+}
+.aboutDesc {
+    display:inline-block;
+    width:30%;
+    margin-left:1%;
+    margin-right:1%;
+    text-align: left;
+    margin-top:7%;
+}
+.aboutDesc h2 {
+    color:#333;
+    font-size:1.375rem;
+}
+.aboutDesc p {
+    font-size:1rem;
+    color:#666;
+}
+.underLine {
+    width:30%;
+    height:0;
+    margin:8% 0;
+    border-bottom:2px solid #1E7A45;
+}
+.aboutBut button {
     height:50px;
     background:#1E7A45;
     border-bottom:green 2px outset;
